# plover_digitalcat_dictionary

./: .gitignore  MANIFEST.in  README.rst  plover_digitalcat_dictionary.py  setup.cfg  tox.ini
test/: test_digitalcat_dict.py
