[metadata]
name = plover_digitalcat_dictionary
version = 0.1.2
description = DigitalCAT dictionary file support for Plover
long_description = file: README.rst
author = Marnanel Thurman
author_email = marnanel@thurman.org.uk
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/marnanel/plover_digitalcat_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover_digitalcat_dictionary

[options.entry_points]
plover.dictionary =
	dct = plover_casecat_dictionary:EclipseDictionary
	mdb = plover_casecat_dictionary:EclipseDictionary

# vim: commentstring=#\ %s list
